--- a/prangati/components/Header/styleHeader.module.css
+++ b/prangati/components/Header/styleHeader.module.css
@@ -1,36 +1,6 @@
 .section-nav__header {
   margin-bottom: 2rem;
-}
-/* section-top */
-.section-top {
-  height: 35px;
-  background-color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 1rem;
-}
-.section-top__paragraph {
-  color: #fff;
-  margin-top: 0;
-  font-weight: 300;
-  font-size: 14px;
-  padding-top: 10px;
-  display: flex;
-  margin-left: auto;
-  width: fit-content;
-  margin-bottom: 10px;
-}
-.section-top__link {
-  color: #fff !important;
-  text-decoration: underline;
-  font-weight: 600;
-  padding-left: 10px;
-}
-.section-top__dropdown {
-  width: calc(1 / 3 * 100%);
-  display: flex;
-  justify-content: center;
+  background-color: #EAEBED;
 }
 /* SECTION NAVBAR  */
 
@@ -41,6 +11,8 @@
   margin-right: auto;
   margin-left: auto;
   justify-content: space-between;
+  margin-top: 2rem;
+  
 }
 .section-nav__logo-link {
   text-decoration: none;
@@ -58,6 +30,7 @@
   align-items: center;
   list-style-type: none;
   margin-bottom: 0;
+  width: 37%;
 }
 .section-nav__menu-item {
   color: #000;
@@ -72,6 +45,7 @@
 .section-nav__helpers {
   display: flex;
   align-items: center;
+  width: 32%;
 }
 .section-nav__helpers-search {
   position: relative;
@@ -87,6 +61,8 @@
   padding-right: 35px;
   color: #000;
   outline: none;
+  width: 200px;
+  border-radius: 5px;
 }
 .section-nav__helpers-search-label {
   position: absolute;
@@ -94,7 +70,6 @@
   cursor: pointer;
 }
 .section-nav__helpers-desire {
-  margin-right: 20px;
 }
 .section-nav__helpers-search-icon {
   font-size: 24px;
@@ -112,10 +87,6 @@
   position: relative;
 }
 
-.section-nav__helpers-search-input {
-  width: 300px;
-  border-radius: 5px;
-}
 
 .section-nav__search-results {
   position: absolute;
