--- a/prangati/components/HomePage/NewsLetter/styleNewsLetter.module.css
+++ b/prangati/components/HomePage/NewsLetter/styleNewsLetter.module.css
@@ -1,5 +1,9 @@
 .section-news {
   background-color: #eaebed;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.section-news__wrapper {
   width: 90%;
   display: flex;
   margin-right: auto;
@@ -25,5 +29,5 @@
   display: flex;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
 }
