--- a/prangati/components/HomePage/NewsLetter/styleNewsLetter.module.css
+++ b/prangati/components/HomePage/NewsLetter/styleNewsLetter.module.css
@@ -1,7 +1,8 @@
 .section-news {
   background-color: #eaebed;
-  padding-top: 2rem;
+  padding-top: 4rem;
   padding-bottom: 2rem;
+  border-bottom: 1px solid #727272;
 }
 .section-news__wrapper {
   width: 90%;
