Added some new features

--- a/prangati/components/CardProduct/styleCardProduct.module.css
+++ b/prangati/components/CardProduct/styleCardProduct.module.css
@@ -1,5 +1,5 @@
 .section-card {
-  background-color: #e5e5e5;
+  background-color: transparent;
   border: 1px solid #1e1e1e;
   padding: 10px 30px;
   position: relative;
