--- a/prangati/components/AboutPage/Vision/styleVision.module.css
+++ b/prangati/components/AboutPage/Vision/styleVision.module.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   padding-bottom: 20px;
   border-bottom: 1.5px solid #000;
+  margin-bottom: 3rem;
 }
 .section-vision__wrapper {
   width: 100%;
