--- a/prangati/components/LogInPage/LogInForm/styleLogInForm.module.css
+++ b/prangati/components/LogInPage/LogInForm/styleLogInForm.module.css
@@ -37,3 +37,27 @@
   text-decoration-color: #754c50;
   font-weight: 600;
 }
+.section-login__modal-button-accept {
+  background-color: #754c50;
+  color: #fff;
+  padding: 10px 25px !important;
+}
+.section-login__modal-button-decline {
+  background-color: #fff;
+  border: 1px solid #754c50;
+  color: #754c50;
+  padding: 10px 25px !important;
+}
+.section-login__form-modal-title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 54px;
+  color: #000000;
+}
+.section-login__form-modal-body {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  color: #1e1e1e;
+}
