--- a/prangati/components/HomePage/PopularProducts/stylePopularProducts.module.css
+++ b/prangati/components/HomePage/PopularProducts/stylePopularProducts.module.css
@@ -23,8 +23,10 @@
   margin-bottom: 2rem;
 }
 .section-popular__products {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,376px);
+  width: 100%;
+  gap: 100px;
   margin-bottom: 5rem;
+
 }
