--- a/prangati/components/Product/ProductInfo/styleProductInfo.scss
+++ b/prangati/components/Product/ProductInfo/styleProductInfo.scss
@@ -102,6 +102,7 @@
       gap: 0.5rem;
       align-items: center;
       &--color {
+        box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.87);
         &:hover {
           opacity: 0.7;
           transition: 0.4s ease-in-out;
