--- a/prangati/styles/globals.scss
+++ b/prangati/styles/globals.scss
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  margin: 0;
+  background-color: #EAEBED;
+}
 .section-nav__header {
   margin-bottom: 2rem;
   background-color: #eaebed;
@@ -200,6 +208,14 @@
 .section-nav__menu-medium__button-icon {
   font-size: 30px;
 }
+.container {
+  max-width: 1300px;
+  padding: 0 35px;
+  display: flex;
+  justify-self: center;
+  flex-direction: column;
+}
+
 @media screen and (max-width: 1000px) {
   .section-nav__menu,
   .section-nav__helpers-desire,
@@ -233,3 +249,6 @@
     margin-top: 2rem;
   }
 }
+
+/* section-top */
+
