--- a/prangati/components/CardProduct/LikeProduct/styleLikeProduct.scss
+++ b/prangati/components/CardProduct/LikeProduct/styleLikeProduct.scss
@@ -1,9 +1,10 @@
 .section-card__wish {
-   height: 24px;
-   cursor: pointer; 
-   &:hover {
+  cursor: pointer;
+  height: 23px;
+  position: relative;
+  width: 20px;
+  &:hover {
     opacity: 0.7;
     transition: 0.3s ease-in-out;
-   }
   }
-  
+}
