--- a/prangati/components/Products/FiltersSorting/Drawer/styleDrawer.scss
+++ b/prangati/components/Products/FiltersSorting/Drawer/styleDrawer.scss
@@ -9,5 +9,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    &--grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 80px);
+      width: 100%;
+      row-gap: 10px;
+    }
   }
 }
